# epic-epicbox-docker

./: .gitignore  .gitmodules  README.md  app_mongo.js  default_config.json  docker-compose.yml  wait-for-mongo.sh
epicboxlib_source/: Cargo.toml
epicboxlib_source/epicboxlib/: Cargo.toml
epicboxlib_source/epicboxlib/src/: lib.rs
epicboxlib_source/epicboxlib/src/types/: epicbox_message.rs  mod.rs
epicboxlib_source/epicboxlib/src/utils/: base58.rs  crypto.rs  mod.rs
nginx/: nginx.conf.template
