[package]
name = "epicboxlib"
version = "1.0.1"
authors = ["vault713 devs"]
description = "A library that encapsulates epicbox integration."
keywords = [ "epicbox", "vault713", "epic", "mimblewimble", "rust", "crypto", "cryptocurrency", "wallet713" ]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "2.0.17"
colored = "3.0.0"
failure = "0.1"
log = "0.4"
parking_lot = {version = "0.12.5"}
rand = "0.9.2"
regex = "1"
ring = "0.17.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.9"
ws = { version="0.9.2" }
zeroize = "1.8.2"
epic_wallet_libwallet = { path = "../epic-wallet/libwallet", version = "4.0.0" }

[dependencies.grin_secp256k1zkp]
git = "https://github.com/EpicCash/rust-secp256k1-zkp"
branch = "master"
#path = "../../rust-secp256k1-zkp"
version = "0.8.0"
features = ["bullet-proof-sizing"]

